--- a/index/index.html
+++ b/index/index.html
@@ -96,7 +96,7 @@
             }
             const notification = {
               title: "新消息",
-              body: content
+              body: content.replace(/&nbsp;/g,'')
             }
             try {
               new window.Notification(notification.title, notification);
