--- a/recent/chatBox.html
+++ b/recent/chatBox.html
@@ -17,108 +17,135 @@
             font-size: 10pt;
         }
 
-
     </style>
     <script>
-        // alert(document.body.isContentEditable)
-        function pasteImg() {
-          document.body.focus();
-          const img = window.top.clipboard.readImage();
-          if (!img.isEmpty()) {
-            const html = `<img width=\"${img.getSize().width / 2}\" height=\"${img.getSize().height / 2}\" src=\"${img.toDataURL()}\">`;
-            document.execCommand("insertHTML", false, html);
-          }
-        }
-        function cont() {
-          parent.window.document.getElementById("face").style.display = 'none'
-          parent.window.document.getElementById("GroupMembers").style.display = 'none'
-        }
-        function paste() {
-          if ((event.metaKey || event.ctrlKey) && event.keyCode == 90) { // undo
-            document.execCommand("undo");
-          } else if ((event.metaKey || event.ctrlKey) && event.keyCode == 67) { // copy
-            event.preventDefault();
-            document.execCommand("copy");
-          } else if ((event.metaKey || event.ctrlKey) && event.keyCode == 86) { // paste
-            event.preventDefault();
-            const text = window.top.clipboard.readText();
-            if (text) {
-      //                    var selection = window.getSelection();
-      //                    selection.deleteFromDocument();
-      //                    var range =  selection.getRangeAt(0);
-      //                    range.insertNode(document.createTextNode(text));
-      //                    selection.collapseToEnd();
-              document.execCommand("insertText", false, text);
-            } else {
-              pasteImg();
-            }
-          } else if (event.altKey && event.keyCode == 13) {
-            event.preventDefault();
-            const selection = window.getSelection();
-            // selection.deleteFromDocument();
-            const range = selection.getRangeAt(0);
-            const divTag = document.createElement("div");
-            divTag.appendChild(document.createElement("br"))
-            range.insertNode(divTag);
-            selection.collapseToEnd();
-    //                var selection = window.getSelection();
-    //                selection.deleteFromDocument();
-    //                var newRange = document.createRange();
-    //                var range = selection.getRangeAt(0);
-    //                selection.collapseToEnd();
-    //                range.startContainer.parentElement.appendChild(document.createElement("br"));
+     const {engine} = window.top
+     const ChatManager = engine.get('ChatManager')
+     var ps = document.location.href.substring(document.location.href.indexOf("?") + 1).split("&")
 
-    //                range.insertNode(document.createElement("br"));
-          } else if (event.keyCode == 13) {
-            event.preventDefault();
-            const imgReg = /(<img.*?>)/ig;// img为分割
-            const srcReg = /src=[\"\'](.*)[\"\']/ig;
-            const widthReg = /width=[\"\'](.*)[\"\']/ig;
-            const heightReg = /height=[\"\'](.*)[\"\']/ig;
-            const wrapTagStartReg = /<[div|br].*?>/ig;// 折行标签开始部分替换成换行符
-            // 匹配非折行标签
-            const notWrapTagReg = /<(?![div|br]).*?>/ig;
-    //              var r = document.body.innerHTML.match(reg);
+     async function remind() {
+      let val = document.body.innerText
+      if (val) {
+       if (val[val.length - 1].indexOf('@') !== -1||(val.length===1&&val.indexOf('@')!==-1)) {
+         if (ps[0]==='true') {
+          parent.window.document.getElementById("rem").style.display = 'block'
+         }
+       }else {
+        parent.window.document.getElementById("rem").style.display = 'none'
+       }
+      }else {
+       parent.window.document.getElementById("rem").style.display = 'none'
+      }
+     }
 
-            const ss = document.body.innerHTML.split(imgReg);
-            ss.forEach((p) => {
-            // alert(p);
-              if (p.startsWith("<img")) {
-                const srcStr = p.match(srcReg);
-                if (srcStr) {
-                  var data = RegExp.$1;
-                }
-                const widthStr = p.match(widthReg);
-                if (widthStr) {
-                  var width = parseInt(RegExp.$1);
-                }
-                const heightStr = p.match(heightReg);
-                if (heightStr) {
-                  var height = parseInt(RegExp.$1);
-                }
-                if (data) {
-                  data = data.substring(data.indexOf(",") + 1);
-                  window.parent.sendImg(data, width, height);
-                }
-              } else {
-                const s = p.replace(notWrapTagReg, "").replace(wrapTagStartReg, "\r\n").trim();
-                if (s) { window.parent.sendText(s); }
-              }
-        })
-            document.body.innerHTML = "";
-            // window.parent.send();
-          }
+     // alert(document.body.isContentEditable)
+     function pasteImg() {
+      document.body.focus()
+      const img = window.top.clipboard.readImage()
+      if (!img.isEmpty()) {
+       const html = `<img width=\"${img.getSize().width / 2}\" height=\"${img.getSize().height / 2}\" src=\"${img.toDataURL()}\">`
+       document.execCommand("insertHTML", false, html)
+      }
+     }
+
+     function cont() {
+      parent.window.document.getElementById("rem").style.display = 'none'
+      parent.window.document.getElementById("face").style.display = 'none'
+      parent.window.document.getElementById("GroupMembers").style.display = 'none'
+     }
+
+     function paste() {
+      if ((event.metaKey || event.ctrlKey) && event.keyCode == 90) { // undo
+       document.execCommand("undo")
+      } else if ((event.metaKey || event.ctrlKey) && event.keyCode == 67) { // copy
+       event.preventDefault()
+       document.execCommand("copy")
+      } else if ((event.metaKey || event.ctrlKey) && event.keyCode == 86) { // paste
+       event.preventDefault()
+       const text = window.top.clipboard.readText()
+       if (text) {
+        //                    var selection = window.getSelection();
+        //                    selection.deleteFromDocument();
+        //                    var range =  selection.getRangeAt(0);
+        //                    range.insertNode(document.createTextNode(text));
+        //                    selection.collapseToEnd();
+        document.execCommand("insertText", false, text)
+       } else {
+        pasteImg()
+       }
+      } else if (event.altKey && event.keyCode == 13) {
+       event.preventDefault()
+       const selection = window.getSelection()
+       // selection.deleteFromDocument();
+       const range = selection.getRangeAt(0)
+       const divTag = document.createElement("div")
+       divTag.appendChild(document.createElement("br"))
+       range.insertNode(divTag)
+       selection.collapseToEnd()
+       //                var selection = window.getSelection();
+       //                selection.deleteFromDocument();
+       //                var newRange = document.createRange();
+       //                var range = selection.getRangeAt(0);
+       //                selection.collapseToEnd();
+       //                range.startContainer.parentElement.appendChild(document.createElement("br"));
+
+       //                range.insertNode(document.createElement("br"));
+      } else if (event.keyCode == 13) {
+       event.preventDefault()
+
+       const imgReg = /(<img.*?>)/ig// img为分割
+       const srcReg = /src=[\"\'](.*)[\"\']/ig
+       const widthReg = /width=[\"\'](.*)[\"\']/ig
+       const heightReg = /height=[\"\'](.*)[\"\']/ig
+       const wrapTagStartReg = /<[div|br].*?>/ig// 折行标签开始部分替换成换行符
+       // 匹配非折行标签
+       const notWrapTagReg = /<(?![div|br]).*?>/ig
+       //              var r = document.body.innerHTML.match(reg);
+
+       const ss = document.body.innerHTML.replace(/&nbsp;/g, '').split(imgReg)
+       ss.forEach((p) => {
+        // alert(p);
+        if (p.startsWith("<img")) {
+         const srcStr = p.match(srcReg)
+         if (srcStr) {
+          var data = RegExp.$1
+         }
+         const widthStr = p.match(widthReg)
+         if (widthStr) {
+          var width = parseInt(RegExp.$1)
+         }
+         const heightStr = p.match(heightReg)
+         if (heightStr) {
+          var height = parseInt(RegExp.$1)
+         }
+         if (data) {
+          data = data.substring(data.indexOf(",") + 1)
+          window.parent.sendImg(data, width, height)
+         }
+        } else {
+         const s = p.replace(notWrapTagReg, "").replace(wrapTagStartReg, "\r\n").trim()
+         if (s) {
+          window.parent.sendText(s)
+         }
         }
-        window.onload = function() {
-          document.body.focus();
-          const range = window.getSelection();// 创建range
-          range.selectAllChildren(document.body);// range 选择obj下所有子内容
-          range.collapseToEnd();// 光标移至最后
-        };
-        window.top.ipc.on("capture-complete", pasteImg);
-        window.addEventListener("beforeunload", (event) => {
-  window.top.ipc.removeListener("capture-complete", pasteImg);
-});
+       })
+       document.body.innerHTML = ""
+       // window.parent.send();
+      }
+     }
+
+     window.onload = function () {
+      document.body.focus()
+      const range = window.getSelection()// 创建range
+      range.selectAllChildren(document.body)// range 选择obj下所有子内容
+      range.collapseToEnd()// 光标移至最后
+     }
+     window.top.ipc.on("capture-complete", pasteImg)
+     window.addEventListener("beforeunload", (event) => {
+      window.top.ipc.removeListener("capture-complete", pasteImg)
+     })
     </script>
 </head>
-<body contenteditable="true"  onclick="cont()" onkeydown="paste()" style="background-color: rgb(243,243,243)">&nbsp;&nbsp;&nbsp;</body></html>
+<body contenteditable="true" oninput="remind()" onclick="cont()" onkeydown="paste()"
+      style="background-color: rgb(243,243,243)"></body>
+</html>
